[package]
name = "remove-console-core"
version = "0.1.0"
edition = "2021"
description = "Webassembly library for removing 'console.log|warn|error|info' from JS source code."
repository = "https://github.com/lunaticscode/remove-console-core"
license = "MIT"
authors = ["Insoo Park <lunatics384@gmail.com>"]
readme = "README.md"
keywords = ["console", "regex", "removal", "remove-console"]
categories = ["development-tools", "text-processing", "remove-console", "remove-text-plugin", "text-remove-plugin"]
publish = false
rust-version = "1.83.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.11.1"
wasm-bindgen = "0.2.100"
